test/classes/deitz/test_inherit_mod3.good
Error: Unresolved call ':C.x' (test_inherit_mod3.chpl:12)
Candidates are:
  :_iterator__promoter.x (/users/waynew/projects/chapel/dev/work2/chapel/modules/standard/_chpl_adomain.chpl:398)
  :D1.x (test_inherit_mod3.chpl:4)
  :D2.x (test_inherit_mod3.chpl:8)
